拆分yarn dist和yarn dist-win32

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder --win --ia32"
+    "dist": "electron-builder",
+    "dist-win32": "electron-builder --win --ia32"
   },
   "build": {
     "appId": "com.22tianbo.chromeapp",
